crates/gql_codegen_core/src/generators/snapshots/gql_codegen_core__generators__documents__tests__generate_documents_plain.snap
---
source: crates/gql_codegen_core/src/generators/documents.rs
expression: result
---
// Generated GraphQL documents

export const GetUserDocument = `
  query GetUser($id: ID!) {
    user(id: $id) {
      id
      name
      email
    }
  }
`;

export const GetUsersDocument = `
  query GetUsers {
    users {
      id
      name
    }
  }
`;

export const CreateUserDocument = `
  mutation CreateUser($input: CreateUserInput!) {
    createUser(input: $input) {
      id
      name
    }
  }
`;
