crates/gql_codegen_core/src/generators/snapshots/gql_codegen_core__generators__documents__tests__generate_documents_with_fragments.snap
---
source: crates/gql_codegen_core/src/generators/documents.rs
expression: result
---
export const UserFieldsDocument = `
  fragment UserFields on User {
    id
    name
    email
  }
`;

export const PostFieldsDocument = `
  fragment PostFields on Post {
    id
    title
    body
  }
`;

export const GetUserWithFragmentsDocument = `
  query GetUserWithFragments($id: ID!) {
    user(id: $id) {
      ...UserFields
      posts {
        ...PostFields
      }
    }
  }
`;
