crates/gql_codegen_core/src/generators/snapshots/gql_codegen_core__generators__documents__tests__generate_documents_with_gql_tag.snap
---
source: crates/gql_codegen_core/src/generators/documents.rs
expression: result
---
// Generated GraphQL documents

import { gql } from 'graphql-tag';

export const GetUserDocument = gql`
  query GetUser($id: ID!) {
    user(id: $id) {
      id
      name
      email
    }
  }
`;

export const GetUsersDocument = gql`
  query GetUsers {
    users {
      id
      name
    }
  }
`;

export const CreateUserDocument = gql`
  mutation CreateUser($input: CreateUserInput!) {
    createUser(input: $input) {
      id
      name
    }
  }
`;
